Feature/sdk (#114)
* update

* clean

* remove tablewriter

* add cluster functions to sdk

* add namespaces crud functions & update docs

* Add job crud

* update
