# internal/app/model/cluster.go
@@ -14,6 +14,11 @@ type Cluster struct {
 	Health bool   `json:"health"`
 }
 
+// Clusters struct
+type Clusters struct {
+	Clusters []Cluster `json:"clusters"`
+}
+
 // LoadFromJSON update object from json
 func (c *Cluster) LoadFromJSON(data []byte) (bool, error) {
 	err := json.Unmarshal(data, &c)
@@ -25,6 +30,24 @@ func (c *Cluster) LoadFromJSON(data []byte) (bool, error) {
 
 // ConvertToJSON convert object to json
 func (c *Cluster) ConvertToJSON() (string, error) {
+	data, err := json.Marshal(&c)
+	if err != nil {
+		return "", err
+	}
+	return string(data), nil
+}
+
+// LoadFromJSON update object from json
+func (c *Clusters) LoadFromJSON(data []byte) (bool, error) {
+	err := json.Unmarshal(data, &c)
+	if err != nil {
+		return false, err
+	}
+	return true, nil
+}
+
+// ConvertToJSON convert object to json
+func (c *Clusters) ConvertToJSON() (string, error) {
 	data, err := json.Marshal(&c)
 	if err != nil {
 		return "", err
