# internal/app/model/namespace.go
@@ -15,6 +15,11 @@ type Namespace struct {
 	Status string `json:"status"`
 }
 
+// Namespaces struct
+type Namespaces struct {
+	Namespaces []Namespace `json:"namespaces"`
+}
+
 // LoadFromJSON update object from json
 func (d *Namespace) LoadFromJSON(data []byte) (bool, error) {
 	err := json.Unmarshal(data, &d)
@@ -26,6 +31,24 @@ func (d *Namespace) LoadFromJSON(data []byte) (bool, error) {
 
 // ConvertToJSON convert object to json
 func (d *Namespace) ConvertToJSON() (string, error) {
+	data, err := json.Marshal(&d)
+	if err != nil {
+		return "", err
+	}
+	return string(data), nil
+}
+
+// LoadFromJSON update object from json
+func (d *Namespaces) LoadFromJSON(data []byte) (bool, error) {
+	err := json.Unmarshal(data, &d)
+	if err != nil {
+		return false, err
+	}
+	return true, nil
+}
+
+// ConvertToJSON convert object to json
+func (d *Namespaces) ConvertToJSON() (string, error) {
 	data, err := json.Marshal(&d)
 	if err != nil {
 		return "", err
